19990518-23:15 David G. Holm <dholm@jsd-llc.com>
  * makefile.b31
    - Put all common BCC options in c_opt macro to make it easy to switch to
      C++ by simply adding -P to c_opt and changing -P- on fixflex line to -P+
    - I left the makefile creating Harbour using C, because there was no change
      in harbour.exe size or behaviour with C++ (Borland C++ 3.1)
  * source/compiler/fixflex.c
    - Modified to work with both C and C++ versions of Harbour
  + tests/working/bldpexe.bat
    - Copy of buildexe.bat with -P option to compile with C++
  + tests/working/hbp.bat
    - Copy of hb.bat that calls bldpexe.bat to use C++

19990519-02:45 Ryszard Glab <rglab@imid.med.pl>

* source/compiler/harbour.y
    - added support for INCLUDE environment variable
    - corrected looking for unmatched ENDIF/ELSE//ELSEIF
    - added '-t' option = alternative initialization of symbol table
    When this option is used then the Harbour generates C code for a function
    <modulename>__InitSymbols that have to be called in order to properly
    initialize the global symbol table. You should use this option if you
    want to generate the C code output and your C compiler doesn't allow 
    to call any function before the 'main'.

* surce/vm/initsymb.c
    - added new file that registers a symbols table with runtime support 
    functions. This file can be edited to add calls for application specific 
    functions that registers local symbols tables used in application modules.
    The Harbour compiler can create <modulename>__InitSymbols functions 
    when you use '-t' option.

* source/vm/hvm.c
    - added call for InitSymbolTable function that registers symbol table
    with runtime support Harbour functions.

19990518-19:30 David G. Holm <dholm@jsd-llc.com>
  * source/rtl/environ.c
    - Enhanced Harbour OS function to return both OS and Version
      for OS/2, DOS, and Windows 95/98.

19990518-18:00 David G. Holm <dholm@jsd-llc.com>
  + buildicc.cmd