@@ -1,0 +1,5 @@
+OUTPUT READHRB.exe
+
+  FILE READHRB.OBJ
+  LIB  BLXCLP52, BLXRATEX
+
