@@ -1,3 +1,15 @@
+19990519-12:50 CET Eddie Runia
+  * source/compiler/harbour.y
+    Some clean up
+  * source/tests/broken/runner.c | run_exp.h | stub.bat
+    removed
+  * source/tests/working/runner.c | run_exp.h | stub.bat
+    added runner code
+  * source/tests/working/spawn.prg
+    spawn example program
+  * source/tests/working/readhrb.prg + readhrb.lnk
+    Clipper program to read .HRB files
+
 19990518-23:15 David G. Holm <dholm@jsd-llc.com>
   * makefile.b31
     - Put all common BCC options in c_opt macro to make it easy to switch to
